connected the rating-data-micro service to the movie-catalog service